<package>
  <name>amclpose_monitor</name>
  <version>0.0.0</version>
  <description>
     A simple pkg to monitor amcl_pose 
  </description>
  <maintainer email="garypursuit@gmail.com">Honggang Gou</maintainer>
  <license>BSD</license>

  <author>Honggang Gou</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
 

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <export>
  </export>

</package>
