<package>
    <name>bz_local_planner</name>
    <version>0.0.0</version>
    <description>bz local planner</description>
    <author>GrayLoo</author>
    
    <maintainer email="luyh@hitrobotgroup.com">GrayLoo</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>base_local_planner</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>eigen_conversions</build_depend>

    <run_depend>base_local_planner</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>eigen_conversions</run_depend>

    <export>
        <nav_core plugin="${prefix}/bz_local_planner_plugin.xml" />
    </export>

</package>


