<?xml version="1.0"?>
<package>
  <name>ultrasonic_speed_filter</name>
  <version>0.1.0</version>
  <description>ROS Package to use the MyzharBot Ultrasonic Bumper Board as security speed filter</description>

  <author email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</author>

  <maintainer email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>


  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


</package>
